// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test du formulaire ListeMentionsFormulaire. (intégration avec événements) > Doit afficher le formulaire avec les valeurs par défaut et correspondre au snapshot 1`] = `
<form
  action="#"
>
  <div>
    <div
      class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
    >
      <span
        class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
      >
        Mention(s) ajoutée(s)
      </span>
      <div
        class="grid gap-2 pt-3"
      >
        <span
          class="text-start text-sm italic"
        >
          Aucune mention ajoutée
        </span>
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        role="log"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
      />
    </div>
  </div>
</form>
`;

exports[`Test du formulaire ListeMentionsFormulaire. (intégration avec événements) > Doit appeler les fonctions de mise à jour avec les bonnes données à la soumission 1`] = `
<form
  action="#"
>
  <div>
    <div
      class="relative rounded-md border border-solid border-blue-200 bg-white px-5 pb-8 pt-4 shadow-md mx-4"
    >
      <span
        class="absolute -top-4 left-8 bg-white px-2 text-start text-xl font-bold text-bleu-sombre"
      >
        Mention(s) ajoutée(s)
      </span>
      <div
        class="grid gap-2 pt-3"
      >
        <div
          aria-roledescription="You are currently at a draggable item at position 1. Press space bar to lift."
          style="user-select: none; box-sizing: border-box; position: relative; z-index: 0;"
          tabindex="0"
        >
          <div
            class="flex cursor-move items-center gap-2 rounded-lg border border-solid border-bleu bg-white px-2 py-4 text-start transition-colors hover:bg-bleu-transparent"
          >
            <span
              class="line-clamp-2 flex-grow"
              title="Mention 1."
            >
              Mention 1.
            </span>
            <div
              class="flex gap-3 px-2"
            >
              <button
                class="m-0 grid w-fit min-w-0 place-content-center rounded p-[.3rem] uppercase transition-colors duration-200 ease-in-out  bg-bleu-sombre text-blanc hover:bg-bleu focus-visible:bg-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-gris-sombre disabled:cursor-not-allowed"
                title="Modifier la 1ère mention"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="EditIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        role="log"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(100%);"
      />
    </div>
  </div>
</form>
`;
